@@ -1,7 +1,7 @@
 Source: cupt
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 7)
+Build-Depends: debhelper (>= 7.0.50)
 Build-Depends-Indep: perl (>= 5.10.0), liburi-perl, libparse-recdescent-perl,
   libwww-curl-perl (>= 4.05)
 Maintainer: Eugene V. Lyubimkin <jackyf.devel@gmail.com>
